@@ -1,5 +1,6 @@
 Revision history for Web::Components
 
+          - Models hash now passed to context constructor
           - Render exception sets level 2
 
 0.11.1    2023-02-16 23:29:31
